<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <include layout="@layout/actionbar_app" android:id="@+id/actionbarLogin"/>

    <TextView
        android:id="@+id/hesaplagiris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youraccountlogin"
        android:layout_below="@+id/actionbarLogin"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="27dp"
        android:textSize="25sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/maillogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/holo_purple"
        android:layout_below="@id/hesaplagiris"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/maillogin"
        android:hint="@string/parola"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:background="@android:color/holo_purple"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />











</RelativeLayout>